src/test/deca/syntax/invalid/test_synt14.deca
//Resultat:
//      Erreur syntaxique : extends deux fois ligne 4
class A{
int x;
}
class B extends A extends A{
boolean x;
}
